--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,11 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ env.IMAGE_URL }}
+          build-args: |
+            VITE_API_BASE_URL=${{ vars.VITE_API_BASE_URL }}
+            VITE_ITUNES_API_BASE=${{ vars.VITE_ITUNES_API_BASE }}
+            VITE_ITUNES_LOOKUP_BASE=${{ vars.VITE_ITUNES_LOOKUP_BASE }}
+            VITE_APPLE_MUSIC_BASE=${{ vars.VITE_APPLE_MUSIC_BASE }}
       - name: Deploy to CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
